Fix: cast, aload, Main